<resources>
    <string name="app_name">My Calculator</string>
    <string name="c">C</string>
    <string name="ce">CE</string>
    <string name="btn_del">Del</string>
    <string name="btn_divide">÷</string>
    <string name="btn_multi">×</string>
    <string name="btn_add">+</string>
    <string name="btn_sub">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="cal">calculation</string>
    <string name="result_value">0</string>
</resources>