<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/calculation"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:inputType="none"
        android:text="@string/cal"
        android:textAlignment="textEnd"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cal_result"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:inputType="none"
        android:text="@string/result_value"
        android:textAlignment="textEnd"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculation" />

    <Button
        android:id="@+id/btn_c"
        style="@style/CalButton"
        android:text="@string/c"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cal_result" />

    <Button
        android:id="@+id/btn_ce"
        style="@style/CalButton"
        android:text="@string/ce"
        app:layout_constraintBottom_toBottomOf="@+id/btn_c"
        app:layout_constraintStart_toEndOf="@+id/btn_c" />

    <Button
        android:id="@+id/btn_del"
        style="@style/CalButton"
        android:text="@string/btn_del"
        app:layout_constraintBottom_toBottomOf="@+id/btn_c"
        app:layout_constraintStart_toEndOf="@+id/btn_ce" />

    <Button
        android:id="@+id/btn_divide"
        style="@style/CalButton"
        android:text="@string/btn_divide"
        app:layout_constraintBottom_toBottomOf="@+id/btn_c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_del" />

    <Button
        android:id="@+id/btn_multi"
        style="@style/CalButton"
        android:text="@string/btn_multi"
        app:layout_constraintBottom_toBottomOf="@+id/btn_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_9" />

    <Button
        android:id="@+id/btn_add"
        style="@style/CalButton"
        android:text="@string/btn_add"
        app:layout_constraintBottom_toBottomOf="@+id/btn_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_3" />

    <Button
        android:id="@+id/btn_sub"
        style="@style/CalButton"
        android:text="@string/btn_sub"
        app:layout_constraintBottom_toBottomOf="@+id/btn_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_6" />

    <Button
        android:id="@+id/btn_1"
        style="@style/NumberButton"
        android:text="@string/one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_4" />

    <Button
        android:id="@+id/btn_2"
        style="@style/NumberButton"
        android:text="@string/two"
        app:layout_constraintBottom_toBottomOf="@+id/btn_1"
        app:layout_constraintStart_toEndOf="@+id/btn_1" />

    <Button
        android:id="@+id/btn_3"
        style="@style/NumberButton"
        android:text="@string/three"
        app:layout_constraintBottom_toBottomOf="@+id/btn_1"
        app:layout_constraintStart_toEndOf="@+id/btn_2" />

    <Button
        android:id="@+id/btn_4"
        style="@style/NumberButton"
        android:text="@string/four"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_7" />

    <Button
        android:id="@+id/btn_5"
        style="@style/NumberButton"
        android:text="@string/five"
        app:layout_constraintBottom_toBottomOf="@+id/btn_4"
        app:layout_constraintStart_toEndOf="@+id/btn_4" />

    <Button
        android:id="@+id/btn_6"
        style="@style/NumberButton"
        android:text="@string/six"
        app:layout_constraintBottom_toBottomOf="@+id/btn_4"
        app:layout_constraintStart_toEndOf="@+id/btn_5" />

    <Button
        android:id="@+id/btn_7"
        style="@style/NumberButton"

        android:text="@string/seven"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_c" />

    <Button
        android:id="@+id/btn_8"
        style="@style/NumberButton"
        android:text="@string/eight"
        app:layout_constraintBottom_toBottomOf="@+id/btn_7"
        app:layout_constraintStart_toEndOf="@+id/btn_7" />

    <Button
        android:id="@+id/btn_9"
        style="@style/NumberButton"
        android:text="@string/nine"
        app:layout_constraintBottom_toBottomOf="@+id/btn_7"
        app:layout_constraintStart_toEndOf="@+id/btn_8" />

    <Button
        android:id="@+id/btn_0"
        style="@style/NumberButton"
        android:layout_width="200dp"
        android:text="@string/zero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_1" />

    <Button
        android:id="@+id/btn_equal"
        style="@style/NumberButton"
        android:layout_width="200dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/equal"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btn_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_0" />
</androidx.constraintlayout.widget.ConstraintLayout>